# malergeist

./: CMakeLists.txt
src/: main.cpp
